codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__permissions_selection_history_full_access_to_default@windows.snap
---
source: tui/src/chatwidget/tests.rs
expression: rendered
---
• 权限已更新为：默认（非管理员沙箱）
