codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__personality_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  选 择 人 格 风 格
  为  Codex 选 择 一 种 沟 通 风 格 。

  1. 友 好           语 气 温 暖 、 协 作 友 好 、 乐 于 帮 助 。
› 2. 务 实 （ 当 前 ）   表 达 简 洁 、 任 务 导 向 、 直 接 明 确 。

  按  enter 确 认 ， 或 按  esc 返 回
