codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_implementation_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  实 现 这 个 计 划 吗 ？

› 1. 是 ， 开 始 实 现 该 计 划   切 换 到 默 认 模 式 并 开 始 编 码 。
  2. 否 ， 保 持 在 计 划 模 式   继 续 让 模 型 进 行 规 划 。

  按  enter 确 认 ， 或 按  esc 返 回
