codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__preamble_keeps_working_status.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• 处理中 (0s • esc 中断)                                                        " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (20, " "), (22, " ")]
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  ? 快捷键                                                     剩余上下文 100%  " Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (64, " "), (66, " "), (68, " "), (70, " "), (72, " ")]
