codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__rate_limit_switch_prompt_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  接 近 限 额
  是 否 切 换 到  gpt-5.1-codex-mini 以 降 低 额 度 消 耗 ？

› 1. 切 换 到  gpt-5.1-codex-mini  针 对  Codex 优 化 。 成 本 更 低 、 速 度 更 快 ， 但 能 力 较
                                弱 。
  2. 保 留 当 前 模 型                继 续 使 用 当 前 模 型 ， 不 进 行 切 换 。
  3. 保 留 当 前 模 型 （ 不 再 提 示 ）    后 续 不 再 提 示 切 换 模 型 的 限 额 提 醒 。

  按  enter 确 认 ， 或 按  esc 返 回
