codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__realtime_audio_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  设 置
  配 置  Codex 的 设 置 。

› 1. 麦 克 风   当 前 ： 系 统 默 认
  2. 扬 声 器   当 前 ： 系 统 默 认

  按  enter 确 认 ， 或 按  esc 返 回
