codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__realtime_microphone_picker_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  选 择 麦 克 风
  已 保 存 设 备 仅 应 用 于 实 时 语 音 。

  1. 系 统 默 认                               使 用 操 作 系 统 默 认 设 备 。
› 2. 不 可 用 ： Studio Mic（ 当 前 ） （ 已 禁 用 ）   当 前 配 置 的 设 备 暂 不 可 用 。 （ 已 禁 用 ：
                                           请 重 新 连 接 设 备 或 选 择 其 他 设 备 。 ）
  3. Built-in Mic
  4. USB Mic

  按  enter 确 认 ， 或 按  esc 返 回
