codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__review_queues_user_messages_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---










• 处理中 (0s • esc 中断)

  ↳ Queued while /review is running.
    ⌥ + ↑ 编辑

› Ask Codex to do anything

  ? 快捷键                                                     剩余上下文 100%
