codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_copy_no_output_info_message.snap
---
source: tui/src/chatwidget/tests.rs
expression: rendered
---
• 在 Codex 首次输出前，或刚回滚后，`/copy` 暂不可用。
